--- a/src/app/stakeholders/stakeholders.component.html
+++ b/src/app/stakeholders/stakeholders.component.html
@@ -1,14 +1,21 @@
 <div class="row">
   <div class="large-12 columns">
-<h1>CSV Downloads</h1>
+<h1>Stakeholder Info</h1>
+<i>Data Source:</i> <code>requests</code> collection<br>
+<i>Methodology:</i> The table and Stakeholders CSV available below contain
+   details about all current stakeholders, defined as organizations in the
+   <code>requests</code> collection where the <code>stakeholder</code> field
+   is set to <code>true</code>. All stakeholders are included, even if they
+   have not had any reports generated or if their scans have not yet begun or
+   if their scans have been paused. Sub-organizations are typically not
+   included, except in rare cases where they have been designated as
+   stakeholders.
+   <p>
 </div></div>
 <div class="row">
   <app-loading-circles *ngIf="isLoading"></app-loading-circles>
-      
   <h4 *ngIf="http_error?.length > 0"> {{http_error}} </h4>
-  
   <div *ngIf="!isLoading" class="large-12 columns">
-<h3>Stakeholder Details</h3>
 <table>
 	<thead>
 		<tr>
