Improve button names for CSV downloads

--- a/src/app/stakeholders/stakeholders.component.html
+++ b/src/app/stakeholders/stakeholders.component.html
@@ -55,7 +55,7 @@
 <div class="row">
   <div class="large-12 columns">
 <div class="flash">
-    <a href="{{this.api_href}}/stakeholders/contacts" class="button tiny radius" title="Download Contact CSV"><i class="fi-page-export-csv">​</i> ​Download Contacts</a>
-    <a href="{{this.api_href}}/stakeholders/stakeholders" class="button tiny radius" title="Download Stakeholder CSV"><i class="fi-page-export-csv">​</i> ​Download Stakeholders</a>
+    <a href="{{this.api_href}}/stakeholders/contacts" class="button tiny radius" title="Download Contacts CSV"><i class="fi-page-export-csv">​</i> ​Download Contacts CSV</a>
+    <a href="{{this.api_href}}/stakeholders/stakeholders" class="button tiny radius" title="Download Stakeholders CSV"><i class="fi-page-export-csv">​</i> ​Download Stakeholders CSV</a>
 </div>
 </div></div>
